--- a/views/edit_project.erb
+++ b/views/edit_project.erb
@@ -1,8 +1,7 @@
-<div class="container">
-  <br>
-  <div class="card text-center">
+
+<div class="card text-center">
     <div class="card-body">
-      <h3 class="card-title"><%= @project.title %> (Edit)</h3>      
+      <h3 class="card-title"><%= @project.title %></h3>      
     </div>
     <div>
       <form action="/projects/<%= @project.id %>" method="post">
@@ -21,6 +20,4 @@
     </div>
     <button type="submit" class="btn btn-dark">Update Project</button>
   </form>
-</div>
-
 </div>
